Fix flex-wrap in .content

--- a/style.css
+++ b/style.css
@@ -139,6 +139,7 @@ body {
     font-size: 16px;
     font-weight: lighter;
     color: #1f2937;
+    flex-wrap: wrap;
 }
 
 .thumbnails > * {
